<resources>
    <string name="app_name">TweeterTweeter</string>
    <string name="consumer_key">AMJAX1bGldW9sUpXnjDdvw</string>
	<string name="consumer_secret">HJiwIdO43SfOhxH1aZIfknNmhcN581kgScAhoN2Wbo</string>
    <string name="bitlyKey">R_faa997c865c4d1fcfe37217c44c1cc21</string>
	<string name="bitlyName">dgsoftwaredevelopment</string>
    <string name="twitpic_key">a70b86c797017c351c09932423d14922</string>
    <string name="receive_twitter_data">Receive Twitter Data</string>
	<string name="receive_data_description">Allow this app to fetch data from twitter</string>

    <string name="btn_dashboard_dm">Direct Messages</string>
    <string name="btn_dashboard_stream">Timeline</string>
    <string name="btn_dashboard_favourites">Favourites</string>
    <string name="btn_dashboard_trends">Trends</string>
    <string name="btn_dashboard_mentions">Mentions</string>
    <string name="btn_dashboard_following">Following</string>
</resources>